--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     list-style: none;    
 }
+
 .container-1 {
     display: flex;
     flex-direction: column;
@@ -43,6 +44,33 @@
         justify-content: space-around;  
     }
     .my-logo {
+    01/2021 - 05/2022
+    Software QA " -- KGS Space Technologies"
+    11/2019 - 01/2021
+    QA Analyst " -- Kazakh Invest"
+    04/2018 - 10/2019
+    Skills
+    Java Script
+    HTML
+    CSS
+    Node.js
+    Mocha
+    React
+    MySQL
+    Connect
+    Send email
+    
+    Instagram
+    
+    Leave a Message
+    Name
+    
+    Email
+    
+    Message
+    
+    Submit
+    Alzhan B © 2023
         margin: 20px;
     }
     nav {
