--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,13 @@ body {
     font-size: 1.35rem;
     font-family: "Varela Round", sans-serif;
     color: rgb(48, 41, 141);
-    background-color:  rgb(239, 244, 251);
+    background-color:  rgba(245, 247, 251, 0.718);
     padding-left: 5%;
     padding-right: 5%;
 }
 header {
-    background: #b3cafc;
+    /* background: #b3cafc; */
+    background: rgb(202, 219, 250);
     font-size: 1rem;
     width: 100%;
     top: 0;
@@ -19,12 +20,37 @@ img {
     border-radius: 25px;
     box-shadow: 10px 5px 15px rgba(2, 25, 57, 0.486);
 }
+/* Navigation menu */
 .navbar ul {
     margin: 1.2rem;
     padding: 0px;
 }
-.navbar ul li{
-    padding: 0px;
+nav li {
+    margin: 0 0 0.5rem 2.2rem; 
+    position: relative;
+}
+nav a {
+    color: #444;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+nav a:hover {
+    color: rgb(69, 102, 222);
+}
+nav a::before {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: #444;
+    
+    position: absolute;
+    top: 0;
+    width: 0%;
+    transition: all ease-in-out 250ms;
+}
+nav a:hover::before {
+    width: 100%;
 }
 /*-- About Section --*/
 .container-1 ul {
@@ -42,7 +68,7 @@ img {
     text-align: center;
 }
 .my-photo {
-    height: 15vh;
+    height: 13vh;
 }
 h1 {
     color: rgb(72, 83, 159);
@@ -51,43 +77,18 @@ h1 {
     margin-left: 2rem; 
 }
 h2 {
-    color: rgb(63, 105, 183);
+    /* color: rgb(63, 105, 183); */
+    color: rgb(198, 115, 206);
     font-size: auto;
     padding-top: 1rem;
     margin: 0px;
     text-align: center;
 }
-nav li {
-    margin: 0 0 0.5rem 2.2rem; 
-    position: relative;
-}
-nav a {
-    color: #444;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-nav a:hover {
-    color: rgb(52, 85, 206);
-}
-nav a::before {
-    content: '';
-    display: block;
-    height: 1px;
-    width: 100%;
-    background-color: #444;
-
-    position: absolute;
-    top: 0;
-    width: 0%;
-    transition: all ease-in-out 250ms;
-}
-nav a:hover::before {
-    width: 100%;
-}
 .container {
     border-radius: 0.5rem;
-    box-shadow: 10px 5px 15px #163e8a80;  
-    background-color: rgba(11, 97, 245, 0.12);
+    box-shadow: 0.5rem 0.2rem 0.5rem #163e8a80;  
+    /* background-color: rgba(11, 97, 245, 0.12); */
+    background-color: rgba(250, 250, 255, 0.693);
     text-align: justify;
 }
 ul.role {
@@ -110,12 +111,17 @@ ul.role {
     text-decoration: none;
 }
 #experience li, #skills li, #connect p {
-    border: 1px solid grey;
+    /* border: 1px solid grey; */
+    background-color: rgb(225, 233, 252);
     padding: 10px; 
     list-style: none;
     border-radius: 12px;
     box-shadow: 8px 5px 5px rgba(99, 123, 187, 0.527);
 } 
+#experience li {
+    padding-left: 3.5rem;
+    width: 72%;
+}
 #experience ul,
 #skills ul,
 #connect p a {
@@ -137,7 +143,7 @@ ul.role {
     margin-top: 20px;
     margin-bottom: 20px;
     width: fit-content;
-    gap: 30px;
+    gap: 2.5rem;
 }
 #projects li:hover,
 #experience li:hover,
@@ -145,14 +151,13 @@ ul.role {
 #connect p:hover,
 .connect a:hover {
     list-style: none;
-    background-color: rgba(70, 154, 223, 0.276);
+    background-color: rgba(151, 185, 243, 0.511);
     color: rgb(2, 23, 82);
 }
 #skills li {
     width: 8rem;
     margin-top: 20px;
     text-align: center;
-    box-shadow: 8px 5px 5px rgba(99, 123, 187, 0.527);
 }
 #leave_message label {
     font-size: medium;
@@ -161,22 +166,46 @@ ul.role {
     max-width: 250px;
     margin: 20px;   
 }
+.container-1.messages ul {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.container-1.messages ul li {   
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid navy;
+    flex-grow: 1;
+}
+.messages a,
+.container-1.messages ul li span,
+.container-1.messages ul li button  {   
+    display: flex;
+    flex-grow: 1;
+    padding-right: 70px;
+    justify-content: space-between;
+    font-size: large;
+}
+/* Buttons for Edit and Remove */
 .leave_message button,
 .messages ul li button {
     background-color: rgb(57, 82, 160);
     color: white;
-    width: 120px;
+    max-width: 90px;
+    min-width: 90px;
+    height: 35px;
     padding: 5px 25px;
     margin-bottom: 4px;
     font-size: medium;
 }
 .leave_message button:hover,
-.messages ul li button:hover {
-    background-color: rgba(70, 154, 223, 0.652);
+#messages button:hover {
+    /* background-color: rgba(70, 154, 223, 0.652); */
     color: rgb(3, 34, 65);
     padding: 5px 25px;
     font-size: medium;
     cursor: pointer;
+    background-color: rgb(106, 142, 248);
 }
 input,
 textarea {
@@ -192,4 +221,7 @@ footer {
     text-align: left;
     font-size: normal;
     font-weight: 500;
+    box-shadow: 10px 5px 5px rgba(10, 35, 97, 0.527);
+    border-top: 0.5px solid rgb(157, 175, 201);
+    border-left: 0.5px solid rgb(157, 175, 201);
 }
