--- a/css/index.css
+++ b/css/index.css
@@ -270,6 +270,11 @@ textarea {
     padding: 5px 2px;
     margin-top: 5px;
     margin-bottom: 5px;
+    border: solid 1px #a0a9bb;
+}
+input:focus,
+textarea:focus {
+   outline: none;
 }
 footer {
     background-color: rgb(213, 223, 248);
