--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,13 @@ body {
 html {
     scroll-padding-top: 13rem;
 }
+.my-photo {
+    height: 13vh;
+    transform: scaleX(-1);
+}
 header {
-    /* background: #b3cafc; */
-    background: rgb(202, 219, 250);
+    z-index: 1;
+    background: rgb(188, 213, 249);
     font-size: 1rem;
     width: 100%;
     top: 0;
@@ -37,6 +41,7 @@ nav a {
     color: #444;
     text-decoration: none;
     text-transform: uppercase;
+    color: rgb(51, 57, 110);
 }
 nav a:hover {
     color: rgb(69, 102, 222);
@@ -71,18 +76,15 @@ nav a:hover::before {
 	border-radius: 13px;
     text-align: center;
 }
-.my-photo {
-    height: 13vh;
-}
 h1 {
-    color: rgb(72, 83, 159);
+    color: rgb(118, 129, 196);
     font-size: 50px;
     font-weight: 750;  
     margin-left: 2rem; 
 }
 h2 {
     /* color: rgb(63, 105, 183); */
-    color: rgb(198, 115, 206);
+    color: rgb(195, 111, 202);
     font-size: auto;
     padding-top: 1rem;
     margin: 0px;
@@ -115,7 +117,6 @@ ul.role {
     text-decoration: none;
 }
 #experience li, #skills li, #connect p {
-    /* border: 1px solid grey; */
     background-color: rgb(225, 233, 252);
     padding: 10px; 
     list-style: none;
@@ -163,8 +164,9 @@ ul.role {
 #connect p:hover,
 .connect a:hover {
     list-style: none;
-    background-color: rgba(151, 185, 243, 0.511);
-    color: rgb(2, 23, 82);
+    /* background-color: rgba(151, 185, 243, 0.511); */
+    background-color: rgba(236, 213, 248, 0.761);
+    color: rgb(37, 71, 164);
 }
 #skills li {
     width: 8rem;
@@ -178,15 +180,23 @@ ul.role {
 #projects li a,
 #experience li,
 #connect p a {
-    text-decoration: none;
+    text-decoration: none; 
     color: rgb(22, 86, 164);
+}
+.emphasis {
+    color: #a2a1a2;
+    font-size: small;
 }
 #leave_message label {
     font-size: medium;
 }
 .form {
     max-width: 250px;
-    margin: 20px;   
+    margin: 20px;  
+    color: rgb(100, 126, 172); 
+}
+form {
+    margin-top: 1.5rem;
 }
 .container-1.messages ul li {
     display: flex;
@@ -218,9 +228,10 @@ ul.role {
 }
 /* Buttons for Submit, Edit and Remove */
 .container-1.form button {
-    background-color: rgb(196, 209, 247);
+    background-color: rgba(164, 193, 243, 0.511);
     border-radius: 6px;
-    border-color: #c5c4c4;
+    border: solid 1px #8a8a8b75;
+    color:  rgb(21, 76, 143);
     padding: 5px 25px;
     font-size: medium;
 }
@@ -265,19 +276,22 @@ ul.role {
 }
 input,
 textarea {
-    width: 85%;
-    font-size: 1rem;
+    width: 95%;
+    font-size: medium;
+    font-family: Arial, sans-serif;
     padding: 5px 2px;
+    padding-left: 1rem;
     margin-top: 5px;
     margin-bottom: 5px;
     border: solid 1px #a0a9bb;
+    color: #444;
 }
 input:focus,
 textarea:focus {
    outline: none;
 }
 footer {
-    background-color: rgb(213, 223, 248);
+    background-color: rgba(240, 191, 240, 0.612);
     padding: 20px 20px;
     text-align: left;
     font-size: normal;
@@ -285,6 +299,7 @@ footer {
     box-shadow: 10px 5px 5px rgba(10, 35, 97, 0.527);
     border-top: 0.5px solid rgb(157, 175, 201);
     border-left: 0.5px solid rgb(157, 175, 201);
+    color: rgb(131, 96, 130);
 }
 .socialMedias{
     float: right;
